Jekyll から除外するファイルを追加

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ description: Crystal Programming Language's blog
 url: http://crystal-lang.org
 highlighter: pygments
 markdown: kramdown
+exclude:
+  - vendor
+  - Gemfile
+  - Gemfile.lock
