Update Node version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 rvm: 2.2
+node_js:
+  - 6
 sudo: false
 cache:
   directories:
@@ -16,3 +18,4 @@ branches:
   only:
     - master
     - gh-pages
+
