--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ cache:
   directories:
     - vendor/bundle
     - $HOME/.npm
-before_install: |
-  npm install -g gitbook-cli
-  bundle install --deployment --jobs=3 --retry=3
+before_install:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
+  - npm install -g gitbook-cli
+  - bundle install --deployment --jobs=3 --retry=3
 script: test $TRAVIS_PULL_REQUEST != "false" || test $TRAVIS_BRANCH != "gh-pages" || ./travis-build.sh
 env:
   global:
