feat(website): set branch to ja

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,4 @@
 [submodule "locale/en/crystal-website"]
 	path = locale/en/crystal-website
 	url = git://github.com/crystal-jp/crystal-website.git
+	branch = ja
