chore: add omegat files as complete project

--- a/i18n/.gitignore
+++ b/i18n/.gitignore
@@ -1,6 +1,8 @@
-/dictionary/
+/dictionary/*
+!/dictionary/.gitkeep
 /source/
-/target/
+/target/*
+!/target/.gitkeep
 /omegat/*
 !/omegat/project_save.tmx
 /*.tmx
