chore: fix workflow

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Run `make public`
         run: |
           pushd locale/ja/crystal-book
+          sed -i -e 's/npm install/npm config set unsafe-perm true \&\& &/' Dockerfile
           docker-compose build
           popd
 
