fix(website): update

--- a/locale/ja/crystal-website/Gemfile
+++ b/locale/ja/crystal-website/Gemfile
@@ -6,3 +6,4 @@ gem 'jekyll-timeago'
 gem 'jekyll-seo-tag'
 gem 'haml'
 gem 'rouge', git: 'https://github.com/manastech/rouge.git', branch: 'crystal'
+gem 'html-proofer'
