Update Gemfile again

--- a/locale/ja/crystal-website/Gemfile
+++ b/locale/ja/crystal-website/Gemfile
@@ -7,3 +7,4 @@ gem 'jekyll-seo-tag'
 gem 'haml'
 gem 'rouge', git: 'https://github.com/manastech/rouge.git', branch: 'crystal'
 gem 'html-proofer'
+gem 'kramdown-parser-gfm'
