--- a/locale/ja/crystal-book/Makefile
+++ b/locale/ja/crystal-book/Makefile
@@ -11,18 +11,18 @@ DOCS_FILES := $(shell find docs -type f)
 build: ## Build website into build directory
 build: $(OUTPUT_DIR)
 
-$(OUTPUT_DIR): $(DOCS_FILES) $(MKDOCS)
+$(OUTPUT_DIR): $(DOCS_FILES) $(MKDOCS) mkdocs.yml
 	$(MKDOCS) build -d $(OUTPUT_DIR) --strict
 
 .PHONY: serve
 serve: ## Run live-preview server
-serve: $(MKDOCS)
+serve: $(MKDOCS) mkdocs.yml
 	$(MKDOCS) serve
 
 deps: $(MKDOCS)
 
 $(MKDOCS): $(PIP) requirements.txt
-	$(PIP) install -q -r requirements.txt
+	$(PIP) install -q --no-deps -r requirements.txt && touch $(MKDOCS)
 
 $(PIP):
 	python3 -m venv .venv
@@ -54,7 +54,7 @@ ansi_up: docs/assets/vendor/ansi_up/ansi_up.min.js
 
 docs/assets/vendor/ansi_up/%:
 	mkdir -p $(@D)
-  curl -sL -o $@ https://cdn.jsdelivr.net/npm/ansi_up@5.0.0/$(@F)
+	curl -sL -o $@ https://cdn.jsdelivr.net/npm/ansi_up@5.0.0/$(@F)
 
 .PHONY: clean
 clean: ## Remove build directory
@@ -70,6 +70,19 @@ clean_vendor: ## Remove docs/assets/vendor directory
 
 .PHONY: clean_all
 clean_all: clean clean_deps clean_vendor
+
+.PHONY: format_api_docs_links
+format_api_docs_links:
+	echo $(DOCS_FILES) | xargs sed -i -E -e 's|https?://(www\.)?crystal-lang.org/api/([A-Z])|https://crystal-lang.org/api/latest/\2|g'
+
+.PHONY: check_internal_links
+check_internal_links: $(DOCS_FILES)
+	if grep -P '\[\w.*?\]\((?!http)[^ )]*?(\.html|/)(#[^ )]*?)?\)' docs/**/*.md; then \
+		echo "Links within the site must end with .md"; exit 1; \
+	fi
+	if grep -P '\]\(/|//crystal-lang.org/reference/' docs/**/*.md; then \
+		echo "Absolute links within the site are disallowed, use relative links instead"; exit 1; \
+	fi
 
 .PHONY: help
 help: ## Show this help
